# lab1-cpp-Kirillog

./: .gitignore  CMakeLists.txt  Graph.cpp  Graph.h  flake.nix  main.cpp  plot.py
tmp/: results.csv  results.txt
